Fixed project name offset on mobile view

--- a/portfolio.css
+++ b/portfolio.css
@@ -177,7 +177,8 @@ p.info{
 		text-align: center;
 	}
 	h4{
-		margin: auto;
+		margin:auto;
+		width: 100%;
 		text-align: center;
 	}
 	div.aboutSection{
